fixed spacing for carousel advancement dots

--- a/src/index.css
+++ b/src/index.css
@@ -73,8 +73,12 @@ div.home {
   left: 0;
 }
 
-/*  */
-
+.alice-carousel__dots {
+  margin: 0px 3px 5px!important;
+  padding: 0;
+  list-style: none;
+  text-align: center;
+}
 
 .bestMate-wordLink {
   /* font-style: italic; */
